<resources>
    <string name="app_name">Wayst</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="object_avoidance_text">Object Avoidance Mode</string>
    <string name="navigation_text">Navigation Mode</string>
    <string name="continue_button_text">Continue</string>

    <string name="start_location_label">From: </string>
    <string name="destination_label">To: </string>
    <string name="start_location_text">Start Location</string>
    <string name="destination_text">Destination</string>
    <string name="navigate_button_text">Navigate</string>
    <string name="your_location_text">Your location</string>
    <string name="directions_label">Directions: </string>
    <string name="logo_content_desc">logo</string>

</resources>
